Begining to flesh out the documentation site

--- a/index.html
+++ b/index.html
@@ -1,61 +1,68 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Cfmailgun by DominicWatson</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="chrome=1">
+		<title>CfMailGun by DominicWatson</title>
+		<link rel="stylesheet" href="stylesheets/styles.css">
+		<link rel="stylesheet" href="stylesheets/pygment_trac.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script src="javascripts/respond.js"></script>
+		<!--[if lt IE 9]>
+			<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+		<!--[if lt IE 8]>
+		<link rel="stylesheet" href="stylesheets/ie.css">
+		<![endif]-->
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  </head>
-  <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/DominicWatson/cfmailgun">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/DominicWatson/cfmailgun/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/DominicWatson/cfmailgun/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
+	</head>
+	<body>
+		<div id="header">
+			<nav>
+				<li class="fork"><a href="https://github.com/DominicWatson/cfmailgun">View On GitHub</a></li>
+				<li class="downloads"><a href="https://github.com/DominicWatson/cfmailgun/zipball/master">ZIP</a></li>
+				<li class="downloads"><a href="https://github.com/DominicWatson/cfmailgun/tarball/master">TAR</a></li>
+				<li class="title">DOWNLOADS</li>
+			</nav>
+		</div><!-- end header -->
 
-    <div class="wrapper">
+		<div class="wrapper">
+			<section>
+				<div id="title">
+					<h1>CfMailGun</h1>
+					<p>CFML Client for the MailGun API (http://documentation.mailgun.com/api_reference.html)</p>
+					<hr>
+					<span class="credits left">Project maintained by <a href="https://github.com/DominicWatson">DominicWatson</a></span>
+					<span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+				</div>
 
-      <section>
-        <div id="title">
-          <h1>Cfmailgun</h1>
-          <p>CFML Client for the MailGun API (http://documentation.mailgun.com/api_reference.html)</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/DominicWatson">DominicWatson</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
+				<h1>
+					<a name="cfmailgun---cfml-client-for-the-mailgun-api" class="anchor" href="#cfmailgun---cfml-client-for-the-mailgun-api"><span class="octicon octicon-link"></span></a>
+					CfMailGun - CFML Client for the MailGun API
+				</h1>
 
-        <h1>
-<a name="cfmailgun---cfml-client-for-the-mailgun-api" class="anchor" href="#cfmailgun---cfml-client-for-the-mailgun-api"><span class="octicon octicon-link"></span></a>CfMailGun - CFML Client for the MailGun API</h1>
+				<p>This CFML client is a simple, single CFC to enable you to easily interact with the MailGun API in your CFML applications (Railo, ColdFusion, Open BlueDragon).</p>
 
-<p>Currently being developed by Dominic Watson @ Pixl8 Interactive <a href="http://www.pixl8.co.uk">http://www.pixl8.co.uk</a>. Details as they come.</p>
-      </section>
+				<p><strong>It is currently a work in progress and pre-alpha. First official release due soon.</strong></p>
+			</section>
 
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-47033968-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
+			<section>
+				<h1>Useage</h1>
+				<p> Documentation to follow...</p>
+			</section>
+		</div>
 
-  </body>
+		<!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		<script type="text/javascript">
+			var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+			document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+		</script>
+		<script type="text/javascript">
+			try {
+				var pageTracker = _gat._getTracker("UA-47033968-1");
+			pageTracker._trackPageview();
+			} catch(err) {}
+		</script>
+	</body>
 </html>
