--- a/index.html
+++ b/index.html
@@ -408,6 +408,173 @@
 					</table>
 				</div>
 
+				<h2>Mailing lists</h2>
+				<div class="method">
+					<h3>ListMailingLists()</h3>
+					<p> <strong class="returns">Returns</strong> the list of mailing lists associated with the account.</p>
+					<h4>Input arguments</h4>
+					<table class="method-arguments">
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Type</th>
+								<th>Required</th>
+								<th>Description</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td class="argument-name">limit</td>
+								<td>number</td>
+								<td class="argument-required">No</td>
+								<td>Optional, default is 100. Limits the number of results to return.</td>
+							</tr>
+							<tr>
+								<td class="argument-name">skip</td>
+								<td>number</td>
+								<td class="argument-required">No</td>
+								<td>Optional, default is 0. Offsets the results to return (used in conjuction with the <code>limit</code> argument to paginate results).</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<div class="method">
+					<h3>GetMailingList()</h3>
+					<p> <strong class="returns">Returns</strong> the mailing list matching the email address supplied.</p>
+					<h4>Input arguments</h4>
+					<table class="method-arguments">
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Type</th>
+								<th>Required</th>
+								<th>Description</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td class="argument-name">address</td>
+								<td>string</td>
+								<td class="argument-required">Yes</td>
+								<td>Email address of the mailing list to retrieve</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+
+				<div class="method">
+					<h3>CreateMailingList()</h3>
+					<p> Creates a new mailing list. <strong class="returns">Returns</strong> confirmation message and details of the newly created mailing list.</p>
+					<h4>Input arguments</h4>
+					<table class="method-arguments">
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Type</th>
+								<th>Required</th>
+								<th>Description</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td class="argument-name">address</td>
+								<td>string</td>
+								<td class="argument-required">Yes</td>
+								<td>A valid email address for the mailing list, e.g. <code>developers@mailgun.net</code>, or <code>Developers &lt;devs@mg.net&gt;</code>. Domain must match a domain registered with MailGun.</td>
+							</tr>
+							<tr>
+								<td class="argument-name">name</td>
+								<td>string</td>
+								<td class="argument-required">No</td>
+								<td>Optional, mailing list name, e.g. Developers.</td>
+							</tr>
+							<tr>
+								<td class="argument-name">description</td>
+								<td>string</td>
+								<td class="argument-required">No</td>
+								<td>Optional, a description</td>
+							</tr>
+							<tr>
+								<td class="argument-name">accessLevel</td>
+								<td>string</td>
+								<td class="argument-required">No</td>
+								<td>Optional, list access level, one of: <code>readonly</code> (default), <code>members</code>, <code>everyone</code></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+
+				<div class="method">
+					<h3>UpdateMailingList()</h3>
+					<p> Update mailing list properties, such as address, description or name. <strong class="returns">Returns</strong> confirmation message and updated details of the mailing list.</p>
+					<h4>Input arguments</h4>
+					<table class="method-arguments">
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Type</th>
+								<th>Required</th>
+								<th>Description</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td class="argument-name">address</td>
+								<td>string</td>
+								<td class="argument-required">Yes</td>
+								<td>Email address of the mailing list you wish to update</td>
+							</tr>
+							<tr>
+								<td class="argument-name">newAddress</td>
+								<td>string</td>
+								<td class="argument-required">Yes</td>
+								<td>Optional, new email address for the list</td>
+							</tr>
+							<tr>
+								<td class="argument-name">name</td>
+								<td>string</td>
+								<td class="argument-required">No</td>
+								<td>Optional, mailing list name, e.g. Developers.</td>
+							</tr>
+							<tr>
+								<td class="argument-name">description</td>
+								<td>string</td>
+								<td class="argument-required">No</td>
+								<td>Optional, a description</td>
+							</tr>
+							<tr>
+								<td class="argument-name">accessLevel</td>
+								<td>string</td>
+								<td class="argument-required">No</td>
+								<td>Optional, list access level, one of: <code>readonly</code> (default), <code>members</code>, <code>everyone</code></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+
+				<div class="method">
+					<h3>DeleteMailingList()</h3>
+					<p> Deletes a mailing list. <strong class="returns">Returns</strong> confirmation message and email address of the deleted mailing list.</p>
+					<h4>Input arguments</h4>
+					<table class="method-arguments">
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Type</th>
+								<th>Required</th>
+								<th>Description</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td class="argument-name">address</td>
+								<td>string</td>
+								<td class="argument-required">Yes</td>
+								<td>Email address of the mailing list you wish to delete</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</section>
 		</div>
 
