Documentation for methods to do with mailing list members

--- a/index.html
+++ b/index.html
@@ -575,6 +575,252 @@
 						</tbody>
 					</table>
 				</div>
+
+				<div class="method">
+					<h3>ListMailingListMembers()</h3>
+					<p> <strong>Returns</strong> the list of mailing list members.</p>
+					<h4>Input arguments</h4>
+					<table class="method-arguments">
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Type</th>
+								<th>Required</th>
+								<th>Description</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td class="argument-name">address</td>
+								<td>string</td>
+								<td class="argument-required">Yes</td>
+								<td>Email address of the mailing list from which to fetch the members</td>
+							</tr>
+							<tr>
+								<td class="argument-name">subscribed</td>
+								<td>boolean</td>
+								<td class="argument-required">No</td>
+								<td>Optional, filter members on whether or not they are subscribed. If not set, all members will be returned</td>
+							</tr>
+							<tr>
+								<td class="argument-name">limit</td>
+								<td>number</td>
+								<td class="argument-required">No</td>
+								<td>Optional, default is 100. Limits the number of results to return.</td>
+							</tr>
+							<tr>
+								<td class="argument-name">skip</td>
+								<td>number</td>
+								<td class="argument-required">No</td>
+								<td>Optional, default is 0. Offsets the results to return (used in conjuction with the <code>limit</code> argument to paginate results).</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+
+				<div class="method">
+					<h3>GetMailingListMember()</h3>
+					<p> <strong>Returns</strong> a mailing list member.</p>
+					<h4>Input arguments</h4>
+					<table class="method-arguments">
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Type</th>
+								<th>Required</th>
+								<th>Description</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td class="argument-name">listAddress</td>
+								<td>string</td>
+								<td class="argument-required">Yes</td>
+								<td>Email address of the mailing list from which to fetch the member</td>
+							</tr>
+							<tr>
+								<td class="argument-name">memberAddress</td>
+								<td>string</td>
+								<td class="argument-required">Yes</td>
+								<td>Email address of the member to fetch</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+
+				<div class="method">
+ 					<h3>CreateMailingListMember()</h3>
+					<p> Adds a member to the mailing list. <strong>Returns</strong> a confirmation message along with details of the newly created member.</p>
+					<h4>Input arguments</h4>
+					<table class="method-arguments">
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Type</th>
+								<th>Required</th>
+								<th>Description</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td class="argument-name">listAddress</td>
+								<td>string</td>
+								<td class="argument-required">Yes</td>
+								<td>Email address of the mailing list to which to add the member</td>
+							</tr>
+							<tr>
+								<td class="argument-name">memberAddress</td>
+								<td>string</td>
+								<td class="argument-required">Yes</td>
+								<td>Email address of the new member</td>
+							</tr>
+							<tr>
+								<td class="argument-name">name</td>
+								<td>string</td>
+								<td class="argument-required">No</td>
+								<td>Optional, member name</td>
+							</tr>
+							<tr>
+								<td class="argument-name">vars</td>
+								<td>struct</td>
+								<td class="argument-required">No</td>
+								<td>Optional, structure of custom variables to save against the member</td>
+							</tr>
+							<tr>
+								<td class="argument-name">subscribed</td>
+								<td>boolean</td>
+								<td class="argument-required">No</td>
+								<td>Optional, whether or not the member is subscribed. Default is <code>true</code></td>
+							</tr>
+							<tr>
+								<td class="argument-name">upsert</td>
+								<td>boolean</td>
+								<td class="argument-required">No</td>
+								<td>Optional, whether to update existing record when found or throw an error (default).</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+
+				<div class="method">
+ 					<h3>UpdateMailingListMember()</h3>
+					<p> Updates a mailing list member with given properties. Won’t touch the property if it’s not passed in. <strong>Returns</strong> a confirmation message along with updated details of the member.</p>
+					<h4>Input arguments</h4>
+					<table class="method-arguments">
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Type</th>
+								<th>Required</th>
+								<th>Description</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td class="argument-name">listAddress</td>
+								<td>string</td>
+								<td class="argument-required">Yes</td>
+								<td>Email address of the mailing list in which the member exists</td>
+							</tr>
+							<tr>
+								<td class="argument-name">memberAddress</td>
+								<td>string</td>
+								<td class="argument-required">Yes</td>
+								<td>Existing email address of the member</td>
+							</tr>
+							<tr>
+								<td class="argument-name">newAddress</td>
+								<td>string</td>
+								<td class="argument-required">No</td>
+								<td>Optional, new email address of the member</td>
+							</tr>
+							<tr>
+								<td class="argument-name">name</td>
+								<td>string</td>
+								<td class="argument-required">No</td>
+								<td>Optional, member name</td>
+							</tr>
+							<tr>
+								<td class="argument-name">vars</td>
+								<td>struct</td>
+								<td class="argument-required">No</td>
+								<td>Optional, structure of custom variables to save against the member</td>
+							</tr>
+							<tr>
+								<td class="argument-name">subscribed</td>
+								<td>boolean</td>
+								<td class="argument-required">No</td>
+								<td>Optional, whether or not the member is subscribed. Default is <code>true</code></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+
+				<div class="method">
+ 					<h3>DeleteMailingListMember()</h3>
+					<p> Delete a mailing list member. <strong>Returns</strong> a confirmation message along with email address of the deleted member.</p>
+					<h4>Input arguments</h4>
+					<table class="method-arguments">
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Type</th>
+								<th>Required</th>
+								<th>Description</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td class="argument-name">listAddress</td>
+								<td>string</td>
+								<td class="argument-required">Yes</td>
+								<td>Email address of the mailing list form which the member should be removed</td>
+							</tr>
+							<tr>
+								<td class="argument-name">memberAddress</td>
+								<td>string</td>
+								<td class="argument-required">Yes</td>
+								<td>Email address of the member to delete</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+
+				<div class="method">
+ 					<h3>BulkCreateMailingListMembers()</h3>
+					<p> Adds multiple members, up to 1,000 per call, to a Mailing List. <strong>Returns</strong> a confirmation message along with the updated details of the list (i.e. new member count).</p>
+					<h4>Input arguments</h4>
+					<table class="method-arguments">
+						<thead>
+							<tr>
+								<th>Name</th>
+								<th>Type</th>
+								<th>Required</th>
+								<th>Description</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td class="argument-name">listAddress</td>
+								<td>string</td>
+								<td class="argument-required">Yes</td>
+								<td>Email address of the mailing list to which to add the members</td>
+							</tr>
+							<tr>
+								<td class="argument-name">members</td>
+								<td>array</td>
+								<td class="argument-required">Yes</td>
+								<td>Array of structs containing member details. Each member struct <strong>must</strong> contain an <code>address</code> key, containing the email address of the member, and optionally may contain <code>name</code> and <code>vars</code> keys. Invalid structs and keys will be ignored.</td>
+							</tr>
+							<tr>
+								<td class="argument-name">subscribed</td>
+								<td>boolean</td>
+								<td class="argument-required">Yes</td>
+								<td>Whether or not the members should be subscribed</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</section>
 		</div>
 
